--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -29,3 +29,12 @@
 ion-img{
   --width:100%;
 }
+
+.heading{
+  color: rgb(218, 39, 39);
+  padding-left: 150px;
+
+}
+.back{
+  background-color: white;
+}
