--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,4 +1,8 @@
-
+ion-content{
+  display: flex;
+  width: 100%;
+  height: 100%;
+}
 #container {
   text-align: center;
 
@@ -48,26 +52,41 @@
 
 }
 
+.card1{
+  border-radius: 15px 0px 25px 5px;
+  
+  background-color:#a2eeeb ;
+}
+
+
+
 .item{
-  top: 30%;
-    position: relative;
+  
+   
     width: 80%;
-    left: 10%;
+    
     --background:#a2eeeb ;
+    position: relative;
+  left: 5%;
 }
 .images{
   top: 30%;
   position: relative;
   width: 80%;
-  left: 20%;
+  left: 5%;
 }
 
 .myitems{
   position: relative;
-  left: 15%;
+  
   
   color: #27b46e;
   font:bold ;
+
+  left: 25%;
+  align-items: center;
+   color:  #27b46e;
+   font-weight: bold
 }
 // .item{
 //   padding-top: 40px;
